fix label visibility

--- a/src/components/field/field.scss
+++ b/src/components/field/field.scss
@@ -66,7 +66,7 @@
         font-size: 9px;
     }
 
-    &--filled &__title {
+    &--message#{&}--filled &__title {
         display: none;
     }
 
